// MetaYB database schema (DBML) - D2
//
// Checked column-by-column (information_schema) against a clean MySQL 8
// database built by `npm run migrate`: every table, column, MySQL column
// type, nullability, default, primary key, unique key, index and foreign key
// below is exactly what that database contains. Built by the TypeORM
// migrations in backend/src/migrations (8, 1790035200000 ... 1790700000000);
// `synchronize` is off, so nothing else creates schema.
//
// Primary keys are UUIDs stored as varchar(36), generated by the application
// (TypeORM), not the database. Every business table carries the same four
// audit columns: Is_Deleted, Created_At, Updated_At, Created_by.
//
// Unique and foreign-key constraint names are TypeORM-generated hashes;
// MySQL names the index backing a foreign key after that key. The author's
// older development database differs slightly (users.contactNumber
// varchar(50), a duplicate foreign key on orders.distributor_id, readable
// constraint names) - see NOTES.md, Known defects.

Enum order_status {
  Placed
  Confirmed
  PendingApproval
  Rejected
  Dispatched
  Delivered
  Cancelled
}

Enum actor_type {
  Distributor
  SalesManager
  System
}

Enum outbound_event_status {
  Pending
  Sent
  Failed
}

Enum user_role {
  DISTRIBUTOR
  SALES_MANAGER
}

Table products {
  id varchar(36) [pk]
  sku varchar(255) [not null]
  name varchar(255) [not null]
  unitPrice decimal(10,2) [not null]
  stockQuantity int [not null, note: "available stock; decremented at placement (the reservation, R1), restored on cancel/reject"]
  Is_Deleted tinyint(1) [not null, default: 0, note: "soft delete - hidden from the catalogue and not orderable"]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)

  indexes {
    sku [unique, name: 'UQ_c44ac33a05b144dd0d9ddcf9327']
    name [name: 'IDX_products_name']
  }
}

Table distributors {
  id varchar(36) [pk]
  name varchar(255) [not null]
  creditLimit decimal(10,2) [not null]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)

  note: "Loyalty tier and available credit are never stored - both are derived live (points_ledger, open orders)."
}

Table sales_managers {
  id varchar(36) [pk]
  name varchar(255) [not null]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)
}

Table orders {
  id varchar(36) [pk]
  distributor_id varchar(36) [not null]
  status order_status [not null]
  discountPercent decimal(5,2) [not null, note: "snapshotted from the distributor's tier at placement (R2)"]
  subtotal decimal(10,2) [not null]
  total decimal(10,2) [not null]
  idempotencyKey varchar(255) [note: "client-generated, optional (Q12)"]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)

  indexes {
    idempotencyKey [unique, name: 'UQ_1881ab845832ad82c4e45f5fe3b']
    distributor_id [name: 'IDX_orders_distributor']
    status [name: 'IDX_orders_status']
    Created_At [name: 'IDX_orders_created_at', note: "order lists default to ORDER BY Created_At DESC"]
  }
}

Table order_line_items {
  id varchar(36) [pk]
  order_id varchar(36) [not null]
  product_id varchar(36) [not null]
  quantity int [not null]
  unitPrice decimal(10,2) [not null, note: "snapshotted from the product at placement"]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)

  indexes {
    order_id [name: 'FK_297288bf81b5ab6e35c9b68eb50']
    product_id [name: 'FK_7269176c85d86bc6f2dc394e0d0']
  }
}

Table order_events {
  id varchar(36) [pk]
  order_id varchar(36) [not null]
  fromStatus varchar(255) [note: "previous status; null only for the initial Placed event"]
  toStatus varchar(255) [not null]
  actorType actor_type [not null]
  actorId varchar(36) [note: "distributor or sales manager id; null for System"]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`, note: "millisecond precision - the event log's sort key"]
  Updated_At datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`, note: "ON UPDATE CURRENT_TIMESTAMP(3)"]
  Created_by varchar(36)
  sequence "bigint unsigned" [not null, increment, note: "AUTO_INCREMENT insert order; tiebreak for events sharing a Created_At millisecond"]
  idempotencyKey varchar(100) [note: "Idempotency-Key of the request that caused this change (Q12)"]

  indexes {
    order_id [name: 'IDX_order_events_order']
    sequence [unique, name: 'sequence']
    idempotencyKey [unique, name: 'UQ_order_events_idempotency_key']
  }

  note: "Append-only audit log (R8, Q14). Triggers trg_order_events_no_update (BEFORE UPDATE) and trg_order_events_no_delete (BEFORE DELETE) reject any change to an existing row; rows leave only via ON DELETE CASCADE from orders. Displayed ordered by (Created_At, sequence)."
}

Table points_ledger {
  id varchar(36) [pk]
  distributor_id varchar(36) [not null]
  order_id varchar(36) [not null]
  points int [not null, note: "signed - a negative row reverses a prior award (R5)"]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "the trailing-90-day window filters on this"]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)

  indexes {
    distributor_id [name: 'IDX_points_ledger_distributor']
    order_id [name: 'FK_e4e70756f9628eb7aae11e70802']
  }

  note: "Balance = SUM(points) over the trailing 90 days (B2); tier is derived from it, never stored."
}

Table outbound_events {
  id varchar(36) [pk]
  order_id varchar(36) [not null]
  eventType varchar(255) [not null]
  payload json [not null, note: "orderId, orderEventId, previousStatus, newStatus, actorType, actorId, total, timestamp"]
  status outbound_event_status [not null]
  attemptCount int [not null, default: 0]
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)
  lastAttemptedAt datetime
  nextRetryAt datetime [note: "when the retry worker should next attempt it; null once Sent or permanently Failed"]
  errorMessage varchar(500)

  indexes {
    order_id [name: 'FK_95595b5baa9081be929278eca4f']
    (status, nextRetryAt) [name: 'IDX_outbound_events_retry']
  }

  note: "One row per order status change (Q11), written in the same transaction as the change, then delivered and retried with exponential backoff (Q15)."
}

Table users {
  id varchar(36) [pk]
  name varchar(255) [not null]
  email varchar(255) [not null]
  password varchar(255) [not null, note: "bcrypt hash"]
  contactNumber varchar(255)
  Is_Deleted tinyint(1) [not null, default: 0]
  Created_At datetime [not null, default: `CURRENT_TIMESTAMP`]
  Updated_At datetime [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
  Created_by varchar(36)
  role user_role [not null]
  distributor_id varchar(36) [note: "set only when role = DISTRIBUTOR"]
  sales_manager_id varchar(36) [note: "set only when role = SALES_MANAGER"]

  indexes {
    email [unique, name: 'UQ_97672ac88f789774dd47f7c8be3']
    distributor_id [name: 'IDX_users_distributor']
    sales_manager_id [name: 'IDX_users_sales_manager']
  }
}

// JWTs revoked by logout before expiry. Only a SHA-256 fingerprint of the
// token is stored. Rows past expiresAt are purged on logout.
Table revoked_tokens {
  tokenHash char(64) [pk, note: "SHA-256 hex of the JWT"]
  user_id varchar(36) [not null]
  expiresAt datetime [not null, note: "the token's own exp"]
  revokedAt datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]

  indexes {
    user_id [name: 'FK_revoked_tokens_user']
    expiresAt [name: 'IDX_revoked_tokens_expires_at']
  }
}

// TypeORM's own migration bookkeeping table.
Table migrations {
  id int [pk, increment]
  timestamp bigint [not null]
  name varchar(255) [not null]
}

// All foreign keys: ON UPDATE NO ACTION.
Ref: orders.distributor_id > distributors.id [delete: restrict]
Ref: order_line_items.order_id > orders.id [delete: cascade]
Ref: order_line_items.product_id > products.id [delete: restrict]
Ref: order_events.order_id > orders.id [delete: cascade]
Ref: points_ledger.distributor_id > distributors.id [delete: cascade]
Ref: points_ledger.order_id > orders.id [delete: cascade]
Ref: outbound_events.order_id > orders.id [delete: cascade]
Ref: users.distributor_id > distributors.id [delete: restrict]
Ref: users.sales_manager_id > sales_managers.id [delete: restrict]
Ref: revoked_tokens.user_id > users.id [delete: cascade]
